#!/usr/bin/env python3
# encoding: utf-8

from libs.grpc import talent

PlotPhaseStatus = talent.PlotPhaseStatus
PlotP2BaseStatus = talent.PlotP2BaseStatus
PlotP1Status = talent.PlotP1Status
PlotP2Status = talent.PlotP2Status
PlotP3Status = talent.PlotP3Status
PlotP4Status = talent.PlotPhaseStatus
PlotDetails = talent.PlotDetails

